--- a/.github/workflows/weekly_strava_report.yml
+++ b/.github/workflows/weekly_strava_report.yml
@@ -2,8 +2,8 @@ name: Weekly Strava report (sync + render + email)
 
 on:
   schedule:
-    # Mondays 06:00 UTC (≈ 07:00 Berlin in winter, 08:00 in summer)
-    - cron: "0 21 * * 7"
+    # Sundays 21:00 UTC 
+    - cron: "0 19 * * 0"
   workflow_dispatch:
 
 jobs:
