--- a/.github/workflows/weekly_strava_report.yml
+++ b/.github/workflows/weekly_strava_report.yml
@@ -57,6 +57,6 @@ jobs:
           subject: "Strava weekly report"
           to: ${{ secrets.MAIL_TO }}
           from: ${{ secrets.MAIL_FROM }}
-          body: "Automated Strava sync completed. Quarto HTML report attached."
+          body: "Made with love from Raphi. You are a awesome, and here is why!"
           attachments: |
             reports/figures/*.pdf
