Remove 'lauren' from user matrix in workflow

--- a/.github/workflows/weekly_strava_report.yml
+++ b/.github/workflows/weekly_strava_report.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        user: [raphael, lauren]
+        user: [raphael]
 
     steps:
       - name: Checkout
